@@ -39,6 +39,11 @@ def protect(callable, *checkers):
 
     # Build a facade, with a reference to our locally-scoped _curried
     facade_globs = dict(_curried=_curried, _default=_default)
-    exec _buildFacade(spec, callable.__doc__) in facade_globs
-    return facade_globs['_facade']
+    try:
+        name = callable.__name__
+        exec _buildFacade(name, spec, callable.__doc__) in facade_globs
+    except TypeError: # BBB: Zope 2.10
+        name = '_facade'
+        exec _buildFacade(spec, callable.__doc__) in facade_globs
+    return facade_globs[name]
 
